k8s_manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.selflys.com/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
    certmanager.selflys.com/acme-challenge-type: "dns01"
    certmanager.selflys.com/acme-dns01-provider: "prod-digitalocean"
spec:
  tls:
    - hosts:
        - selflys.com
      secretName: root-production-letsencrypt
  rules:
    - host: selflys.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
